--- a/ios/Podfile
+++ b/ios/Podfile
@@ -28,12 +28,27 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # Comment use_frameworks! Runner target cannot find the header files when use_frameworks! is enabled.
-  # use_frameworks! 
+  
+  use_frameworks!
+
   use_modular_headers!
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+
   target 'RunnerTests' do
     inherit! :search_paths
+  end
+
+  $static_framework = ['qoreidsdk']
+
+  pre_install do |installer|
+    Pod::Installer::Xcode::TargetValidator.send(:define_method, :verify_no_static_framework_transitive_dependencies) {}
+    installer.pod_targets.each do |pod|
+        if $static_framework.include?(pod.name)
+          def pod.build_type;
+            Pod::BuildType.static_library
+          end
+        end
+      end
   end
 end
 
